# document-knowledge-pipe

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: build-bundle.yml  ci.yml  doc-tests.yml  docs.yml  release.yml
docs/superpowers/plans/: 2026-03-23-document-knowledge-pipe.md  2026-03-24-model-agnostic.md  2026-03-25-full-pipeline-demo.md
docs/superpowers/specs/: 2026-03-23-document-knowledge-pipe-design.md  2026-03-24-model-agnostic-design.md  2026-03-25-full-pipeline-demo-design.md
examples/: README.md  config.yaml  run_demo.sh
examples/input/: api_docs.html  inventory.ods  lab_results.xls  meeting_minutes.rtf  quarterly_review.pptx  sales_data.xlsx  sprint_review.odp  tech_spec.odt  user_guide.epub
scripts/: build_offline_bundle.py  download_kaggle_datasets.py  test_build_offline_bundle.py
src/docpipe/: __init__.py  cli.py  config.py  converter.py  describer.py  extractor.py  graph.py  pipeline.py  registry.py  status.py  watcher.py
src/docpipe/providers/: __init__.py  anthropic.py  azure.py  base.py  (+1 more)
tests/: conftest.py  test_cli.py  test_cli_query.py  test_config.py  test_converter.py  test_describer.py  test_doctypes.py  test_e2e_anthropic.py  test_extractor.py  test_full_system.py  test_graph.py  test_graph_query.py  test_graph_query_unit.py  test_integration.py  test_pipeline.py  test_providers_anthropic.py  test_providers_azure.py  test_providers_base.py  test_providers_factory.py  test_providers_openai.py  test_registry.py  test_status.py  test_watcher.py
tests/fixtures/: README.md  sample.html  sample.odt  sample.rtf
